# cid

./: .gitignore  LICENSE  README.md  TODO.org  cid.asd  cid.lisp  configure.ac  mkdocs.yml  org.melusina.cid.asd
admin/: Makefile  Makefile.config.in  cid_configure.sh  cid_console.sh  cid_dump.sh  cid_githook_postreceive.sh  cid_restore.sh  configure.ac
development/: audit  build  clean  describe  lint  makedoc  publish  run  setup  testsuite  verify
doc/: docker-engine.texinfo  git_console.md  introduction.texinfo  local-filesystem-subtree.texinfo  org.melusina.cid.texinfo  phony.texinfo  poc.texinfo  project.texinfo  resource.texinfo  simulator.texinfo  steward.texinfo  tenant.texinfo  trac_console.md
example/: cid.conf
operation/: audit  console  create  delete  describe  dump  restore  setup  start  status  stop  update
script/: setup.lisp  slime-filename-translation.el
src/: clsql-extension.lisp  database.lisp  dockerfile.lisp  entry-point.lisp  entrypoint.lisp  gocd.lisp  health.lisp  identity.lisp  initialization-file.lisp  package.lisp  poc.lisp  project.lisp  provider.lisp  resource.lisp  server.lisp  steward.lisp  tenant.lisp  trac.lisp  utilities.lisp
subr/: .gitignore  Makefile  Makefile.config.in  assert.sh  autoconf.sh.in  config.sh  configure.ac  gitserver.sh  jenkins.sh  lisp.sh  role.sh  service.sh  stdlib.sh  tenant.sh  trac.sh
support/: Makefile  Makefile.config.in  cid_admin.sh  cid_configure.sh  cid_dump.sh  cid_githook_postreceive.sh  cid_jenkins_tool.sh  cid_repository.sh  cid_restore.sh  configure.ac
testsuite/: database.lisp  (+13 more)
(+167 files in other folders)
